# procurement

./: app.py
aedco_one_platform/: PLATFORM_SUMMARY.md  README.md  app.py  config.py  demo.py  requirements.txt  run.py  simple_demo.py  test_platform.py
aedco_one_platform/prompts/: Electricity.txt  OilGas.txt  Transportation.txt
aedco_one_platform/static/js/: app.js
aedco_one_platform/templates/: index.html
modules/: data_collector.py  email_generator.py  terms_conditions.py
procurment-tool/: .env.example  README.md  app.py  pyproject.toml  replit.md  requirements.txt  setup_database.sql  test_connection.py
procurment-tool/attached_assets/: Pasted-SYSTEM-You-are-an-expert-AI-Research-Analyst-trusted-by-C-level-executives-Follow-academic-rigour-1754376750000_1754376750001.txt  oil_gas_suppliers_consolidated_1754380662439.csv
procurment-tool/data/: processed_orders.csv
procurment-tool/modules/: data_collector.py  deadline_calculator.py  document_parser.py  email_generator.py  order_tracker.py  supplier_manager.py  terms_conditions.py
supabase/migrations/: 20250903093149_shrill_pebble.sql
